--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -8,12 +8,17 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font: bold ,14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#222;
   margin:0 0 20px;
 }
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
+}
+
+.underTitle{
+	margin: 0 0 0px
 }
 
 h1, h2, h3 {
